--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_mobx: ^2.2.1+1
   go_router: ^14.3.0
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
   mobx: ^2.3.3+2
   mobx_codegen: ^2.6.1
   sqflite: ^2.4.0
