--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_mobx: ^2.2.1+1
+  geolocator: ^13.0.1
   go_router: ^14.3.0
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
