--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map: ^7.0.2
   flutter_mobx: ^2.2.1+1
+  geocoding: ^3.0.0
   geolocator: ^13.0.1
   go_router: ^14.3.0
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
+  latlong2: ^0.9.1
   mobx: ^2.3.3+2
   mobx_codegen: ^2.6.1
   sqflite: ^2.4.0
